@@ -37,9 +37,9 @@ const struct {
     { "../data/articles/bad-hdr-trunc",
       "437 No colon-space in \"Test:\" header" },
     { "../data/articles/bad-long-cont",
-      "437 Header line too long (1025 bytes)" },
+      "437 Header line too long (1001 bytes)" },
     { "../data/articles/bad-long-hdr",
-      "437 Header line too long (1025 bytes)" },
+      "437 Header line too long (1001 bytes)" },
     { "../data/articles/bad-no-body",
       "437 No body" },
     { "../data/articles/bad-no-header",
